# restrike

./: .git-blame-ignore-revs  .gitignore  BRIEF.md  Cargo.toml  PLAN.md  README.md  SOURCES.md
.github/workflows/: ci.yml
crates/gbx-engine/: Cargo.toml
crates/gbx-engine/src/: boot.rs  charsheet.rs  combat.rs  combat_wiring.rs  corridor.rs  demo.rs  draw.rs  engine.rs  framebuffer.rs  frames.rs  h2_conformance.rs  hash_goldens.rs  import.rs  input.rs  lib.rs  money.rs  monster.rs  movement.rs  party.rs  rng.rs  save.rs  save_roundtrip_tests.rs  saveload.rs  saveload_fs.rs  screens.rs  shell.rs  shop.rs  symbols.rs  test_support.rs  text.rs  training.rs  vm_stub.rs  vmhost.rs  walk_goldens.rs  widgets.rs
crates/gbx-engine/src/combat/: affects.rs  ai.rs  attack.rs  facing.rs  mod.rs  records.rs  spells.rs
crates/gbx-engine/src/combat/tests/: affects.rs  ai.rs  attack.rs  core.rs  facing.rs  mod.rs  records.rs  spells.rs
crates/gbx-formats/: Cargo.toml
crates/gbx-formats/fuzz/: Cargo.toml  README.md
crates/gbx-formats/fuzz/fuzz_targets/: exepack.rs  save_orig.rs
crates/gbx-formats/src/: affects.rs  anim.rs  dax.rs  detect.rs  ecl_text.rs  exepack.rs  font.rs  game_data.rs  geo.rs  image.rs  items.rs  lib.rs  monster.rs  save_orig.rs  walldef.rs
crates/gbx-oracle/: Cargo.toml
crates/gbx-oracle/src/: compare.rs  format.rs  lib.rs  sink.rs
crates/gbx-oracle/tests/: golden.rs  h4_frontier_guard.rs  h4_replay.rs  h4_turndiff.rs
crates/gbx-oracle/tests/common/: mod.rs
crates/gbx-prng/: Cargo.toml
crates/gbx-prng/src/: lib.rs
crates/gbx-prng/tests/: stepper.rs
crates/gbx-rules/: Cargo.toml
crates/gbx-rules/packs/adnd1/: constants.toml  creation.toml  hp_hd.toml  progression.toml  spell_slots.toml  thief_skills.toml
crates/gbx-rules/src/: bash_door.rs  flavor.rs  lib.rs  palette.rs
crates/gbx-rules/src/adnd1/: constants.rs  creation.rs  creation_limits.rs  flavor_impl.rs  hp_hd.rs  mod.rs  progression.rs  spell_slots.rs  thief_skills.rs
crates/gbx-rules/src/pack/: element.rs  mod.rs  raw.rs  validate.rs  verify.rs
crates/gbx-rules/tests/: slot_probe.rs
crates/gbx-vm/: Cargo.toml
crates/gbx-vm/src/: conformance.rs  decode.rs  dialect.rs  disasm.rs  host.rs  lib.rs  machine.rs  real_data_tests.rs  test_support.rs
docs/: README.md  copy-protection.md  dosbox-capture.md  fidelity-docket.md
docs/census/: cotab-v1.3.md
docs/design/: combat-study.md  engine-restructure.md  h4-entry-state-snapshot.md  opcode-classification.md  oracle-rig.md  renderer-ui-shell.md  rules-packs.md  save-formats.md  vm-scriptmemory.md
fixtures/: README.md  tilverton-circuit.jsonl
fixtures/synthetic-unknown-game/: README.md
frontends/cli/: Cargo.toml
frontends/cli/examples/: record_circuit.rs
frontends/cli/src/: census.rs  compare.rs  dump_image.rs  extract_table.rs  lib.rs  main.rs  map.rs  run_script.rs  trace_compare.rs  verify.rs  walk.rs
frontends/cli/tests/: detect.rs  dump_image.rs  map.rs  run_script.rs  walk.rs
frontends/desktop/: Cargo.toml
frontends/desktop/src/: keymap.rs  main.rs  scale.rs
frontends/web/: Cargo.toml  README.md  index.html
frontends/web/src/: keymap.rs  lib.rs
tools/ci/: no-game-data-guard.sh
tools/inspect/: Cargo.toml
tools/inspect/src/: app.rs  keymap.rs  main.rs  real_data_smoke.rs  widgets.rs
tools/inspect/src/panes/: disasm.rs  engine.rs  mod.rs  resource_browser.rs
tools/inspect/src/viewmodel/: block_kind.rs  call_table.rs  copy.rs  geo_map.rs  goto.rs  halt_table.rs  hex.rs  log_table.rs  mod.rs  palette.rs  ppm.rs  walldef.rs
