[workspace]
resolver = "2"
members = [
    "crates/gbx-formats",
    "crates/gbx-vm",
    "crates/gbx-rules",
    "crates/gbx-engine",
    "crates/gbx-oracle",
    "frontends/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/bryanshort/restrike"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
