[package]
name = "gbx-oracle"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Trace format, comparators, and replay driver for differential testing against the original engine."

[dependencies]
# Canonical `.gbxtrace` encoding (D-OR3): serde structs in fixed field order +
# serde_json compact output give byte-deterministic, integer-only JSONL with no
# insignificant whitespace — hashable (the H1 hashes-only pattern) — while
# serde's default unknown-field tolerance makes the *reader* liberal (the
# staging hook emits extra diagnostic fields we ignore). Both crates are pure
# Rust and wasm-clean. `preserve_order` is deliberately NOT enabled: serde_json
# keeps `Value` maps in a sorted `BTreeMap`, so the rare object-valued `caller`
# still serializes deterministically.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# `Prng::next()` is the chain-continuity `step` (D-OR4 part B): `after_i` must
# equal `step(before_i)`. Using the real generator (not a re-implemented LCG)
# keeps the check independent of any hand-copied constant.
gbx-prng = { path = "../gbx-prng" }
# The `RngSink` trait lives in gbx-engine (the core stays pure); gbx-oracle
# provides the `.gbxtrace`-writing implementation, so the dependency points
# oracle -> engine only (never the reverse). gbx-engine is itself wasm-clean
# (already in the CI wasm list), so this keeps gbx-oracle wasm-clean.
gbx-engine = { path = "../gbx-engine" }

[dev-dependencies]
# Committed synthetic-golden SHA-256 (D-OR3 CI posture): regenerated by running,
# never hand-edited — the save_roundtrip_tests golden pattern.
sha2 = "0.10"
