[package]
name = "gbx-vm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "ECL bytecode decoder, disassembler, interpreter, and ScriptMemory facade."

[dependencies]
gbx-formats = { path = "../gbx-formats" }

[dev-dependencies]

[features]
# Micro-ECL synthetic block builder (design doc §4): used by this crate's own
# disassembler/decoder tests, and re-enabled as a dev-dependency by other
# crates' conformance tests (e.g. the interpreter, later) so the builder
# isn't duplicated per-crate.
test-support = []
