[package]
name = "restrike-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Headless CLI frontend for Restrike: dump | disasm | census | map | detect | run-script | replay | verify."

[lib]
name = "restrike_cli"
path = "src/lib.rs"

[[bin]]
name = "restrike"
path = "src/main.rs"

[dependencies]
gbx-formats = { path = "../../crates/gbx-formats" }
gbx-prng = { path = "../../crates/gbx-prng" }
gbx-vm = { path = "../../crates/gbx-vm" }
gbx-rules = { path = "../../crates/gbx-rules" }
gbx-engine = { path = "../../crates/gbx-engine" }
gbx-oracle = { path = "../../crates/gbx-oracle" }
serde = "1"
serde_json = "1"
# CLI-only (never gbx-*, D-UI5's crate-purity rule): decodes DOSBox PNG
# captures for `restrike compare`. pnm covers our own .ppm dumps too, so
# `compare` reads both sides through one decoder.
image = { version = "0.25", default-features = false, features = ["png", "pnm"] }

[dev-dependencies]
tempfile = "3"
gbx-vm = { path = "../../crates/gbx-vm", features = ["test-support"] }
