[package]
name = "restrike-web"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Web frontend for Restrike: a wasm-bindgen + canvas 2D presenter (D-UI6)."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gbx-formats = { path = "../../crates/gbx-formats" }
gbx-engine = { path = "../../crates/gbx-engine" }
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = ["CanvasRenderingContext2d", "Document", "Element", "HtmlCanvasElement", "ImageData", "KeyboardEvent", "Window", "console"]
