[package]
name = "gbx-formats-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.gbx-formats]
path = ".."

[[bin]]
name = "exepack"
path = "fuzz_targets/exepack.rs"
test = false
doc = false
bench = false

[workspace]
